# consensus

./: .gitignore  Cargo.toml  bench.sh  book.toml  readme.md
.github/workflows/: build.yml  gh-pages.yml
benches/: benchmark.rs
consensus/: .gitignore  Cargo.toml
consensus/src/: call.rs  duplicates.rs  main.rs
generate_index/: .gitignore  Cargo.toml
generate_index/src/: main.rs
generate_index/tmp/: data
src/: SUMMARY.md  call.md  call.rs  cli.rs  cluster.rs  duplicates.rs  file.rs  filter.rs  generate-index.md  generate_index.rs  group.rs  hash.rs  index.rs  introduction.md  io.rs  kmer.rs  lib.rs  main.rs  metrics.rs  options.rs  ordered_rayon.rs  pairings.rs  preset.rs  quickstart.md  reader.rs  record.rs  seq.rs  summarize.md  summary.rs  summary_template.html
src/align/: mod.rs
src/assets/: summary.html
src/commands/: call.md  summarize.md
src/pairings/: from_reader.rs  mod.rs
src/reader/: bytes.rs  fastq.rs  mod.rs
src/seq/: bitenc.rs  dna.rs  id.rs  mod.rs  seq.rs  sequence.rs  transformer.rs
src/stats/: mod.rs
tests/: cli.rs  integration_test.rs
tests/correct/: index.tsv
tests/samples/: small.fastq.out
