[package]
name = "nailpolish"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bincode = "1.3.3"
bio = "1.6.0"
bk-tree = "0.5.0"
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
env_logger = "0.11.3"
itertools = "0.13.0"
log = "0.4.22"
lsh-rs = { version = "0.4.0", features = ["blas", "sqlite"] }
murmur3 = "0.5.2"
rand = { version = "0.8.5", features = ["std_rng"] }
rayon = "1.10.0"
rustc-hash = "2.0.0"
serde = { version = "=1.0.104", features = ["derive"] }
spoa = { git = "https://github.com/olliecheng/spoa-rs" }
triple_accel = "0.4.0"
num-traits = "0.2.19"
needletail = "0.5.1"
rkyv = { version = "0.7.45", features = ["bytecheck"] }
ndarray = "0.16.1"
memmap2 = "0.9.5"
ahash = "0.8.11"
tab-hash = "0.3.0"

[[bin]]
name = "nailpolish"
