[package]
name = "nailpolish"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
bio = "1.6.0"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
crossbeam = "0.8.4"
csv = "1.3.0"
env_logger = "0.11.3"
handlebars = "6.2.0"
indexmap = "2.5.0"
log = "0.4.22"
needletail = { git = "https://github.com/olliecheng/needletail" }
num = "0.4.3"
pariter = "0.5.1"
rayon = "1.10.0"
regex = "1.10.6"
serde = "1.0.203"
serde_json = "1.0.118"
spoa = { git = "https://github.com/olliecheng/spoa-rs" }
tempfile = "3.14.0"
thiserror = "1.0.64"
predicates = "3.1.2"

[[bin]]
name = "nailpolish"

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
# use CentOS7-compatible builder (supports libc 2.17)
image = "ghcr.io/olliecheng/images:cross-x86-centos"
